namelonspacelon java com.twittelonr.follow_reloncommelonndations.thriftjava
#@namelonspacelon scala com.twittelonr.follow_reloncommelonndations.thriftscala
#@namelonspacelon strato com.twittelonr.follow_reloncommelonndations

// Callelonr/Clielonnt lelonvelonl speloncific contelonxt (elon.g, uselonr id/guelonst id/app id).
struct ClielonntContelonxt {
  1: optional i64 uselonrId(pelonrsonalDataTypelon='UselonrId')
  2: optional i64 guelonstId(pelonrsonalDataTypelon='GuelonstId')
  3: optional i64 appId(pelonrsonalDataTypelon='AppId')
  4: optional string ipAddrelonss(pelonrsonalDataTypelon='IpAddrelonss')
  5: optional string uselonrAgelonnt(pelonrsonalDataTypelon='UselonrAgelonnt')
  6: optional string countryCodelon(pelonrsonalDataTypelon='InfelonrrelondCountry')
  7: optional string languagelonCodelon(pelonrsonalDataTypelon='InfelonrrelondLanguagelon')
  9: optional bool isTwofficelon(pelonrsonalDataTypelon='InfelonrrelondLocation')
  10: optional selont<string> uselonrRolelons
  11: optional string delonvicelonId(pelonrsonalDataTypelon='DelonvicelonId')
  12: optional i64 guelonstIdAds(pelonrsonalDataTypelon='GuelonstId')
  13: optional i64 guelonstIdMarkelonting(pelonrsonalDataTypelon='GuelonstId')
}(hasPelonrsonalData='truelon')
