packagelon com.twittelonr.follow_reloncommelonndations.selonrvicelons

import com.twittelonr.finaglelon.thrift.ClielonntId
import com.twittelonr.finatra.thrift.routing.ThriftWarmup
import com.twittelonr.follow_reloncommelonndations.thriftscala.FollowReloncommelonndationsThriftSelonrvicelon.GelontReloncommelonndations
import com.twittelonr.follow_reloncommelonndations.thriftscala.ClielonntContelonxt
import com.twittelonr.follow_reloncommelonndations.thriftscala.DelonbugParams
import com.twittelonr.follow_reloncommelonndations.thriftscala.DisplayContelonxt
import com.twittelonr.follow_reloncommelonndations.thriftscala.DisplayLocation
import com.twittelonr.follow_reloncommelonndations.thriftscala.Profilelon
import com.twittelonr.follow_reloncommelonndations.thriftscala.ReloncommelonndationRelonquelonst
import com.twittelonr.injelonct.Logging
import com.twittelonr.injelonct.utils.Handlelonr
import com.twittelonr.scroogelon.Relonquelonst
import com.twittelonr.scroogelon.Relonsponselon
import com.twittelonr.util.Relonturn
import com.twittelonr.util.Throw
import com.twittelonr.util.Try
import javax.injelonct.Injelonct
import javax.injelonct.Singlelonton

@Singlelonton
class FollowReloncommelonndationsSelonrvicelonWarmupHandlelonr @Injelonct() (warmup: ThriftWarmup)
    elonxtelonnds Handlelonr
    with Logging {

  privatelon val clielonntId = ClielonntId("thrift-warmup-clielonnt")

  ovelonrridelon delonf handlelon(): Unit = {
    val telonstIds = Selonq(1L)
    delonf warmupQuelonry(uselonrId: Long, displayLocation: DisplayLocation): ReloncommelonndationRelonquelonst = {
      val clielonntContelonxt = ClielonntContelonxt(
        uselonrId = Somelon(uselonrId),
        guelonstId = Nonelon,
        appId = Somelon(258901L),
        ipAddrelonss = Somelon("0.0.0.0"),
        uselonrAgelonnt = Somelon("FAKelon_USelonR_AGelonNT_FOR_WARMUPS"),
        countryCodelon = Somelon("US"),
        languagelonCodelon = Somelon("elonn"),
        isTwofficelon = Nonelon,
        uselonrRolelons = Nonelon,
        delonvicelonId = Somelon("FAKelon_DelonVICelon_ID_FOR_WARMUPS")
      )
      ReloncommelonndationRelonquelonst(
        clielonntContelonxt = clielonntContelonxt,
        displayLocation = displayLocation,
        displayContelonxt = Nonelon,
        maxRelonsults = Somelon(3),
        felontchPromotelondContelonnt = Somelon(falselon),
        delonbugParams = Somelon(DelonbugParams(doNotLog = Somelon(truelon)))
      )
    }

    // Add FRS display locations helonrelon if thelony should belon targelontelond for warm-up
    // whelonn FRS is starting from a frelonsh statelon aftelonr a delonploy
    val displayLocationsToWarmUp: Selonq[DisplayLocation] = Selonq(
      DisplayLocation.HomelonTimelonlinelon,
      DisplayLocation.HomelonTimelonlinelonRelonvelonrselonChron,
      DisplayLocation.ProfilelonSidelonbar,
      DisplayLocation.NuxIntelonrelonsts,
      DisplayLocation.NuxPymk
    )

    try {
      clielonntId.asCurrelonnt {
        // Itelonratelon ovelonr elonach uselonr ID crelonatelond for telonsting
        telonstIds forelonach { id =>
          // Itelonratelon ovelonr elonach display location targelontelond for warm-up
          displayLocationsToWarmUp forelonach { displayLocation =>
            val warmupRelonq = warmupQuelonry(id, displayLocation)
            info(s"Selonnding warm-up relonquelonst to selonrvicelon with quelonry: $warmupRelonq")
            warmup.selonndRelonquelonst(
              melonthod = GelontReloncommelonndations,
              relonq = Relonquelonst(GelontReloncommelonndations.Args(warmupRelonq)))(asselonrtWarmupRelonsponselon)
            // selonnd thelon relonquelonst onelon morelon timelon so that it goelons through cachelon hits
            warmup.selonndRelonquelonst(
              melonthod = GelontReloncommelonndations,
              relonq = Relonquelonst(GelontReloncommelonndations.Args(warmupRelonq)))(asselonrtWarmupRelonsponselon)
          }
        }
      }
    } catch {
      caselon elon: Throwablelon =>
        // welon don't want a warmup failurelon to prelonvelonnt start-up
        elonrror(elon.gelontMelonssagelon, elon)
    }
    info("Warm-up donelon.")
  }

  /* Privatelon */

  privatelon delonf asselonrtWarmupRelonsponselon(relonsult: Try[Relonsponselon[GelontReloncommelonndations.SuccelonssTypelon]]): Unit = {
    // welon collelonct and log any elonxcelonptions from thelon relonsult.
    relonsult match {
      caselon Relonturn(_) => // ok
      caselon Throw(elonxcelonption) =>
        warn()
        elonrror(s"elonrror pelonrforming warm-up relonquelonst: ${elonxcelonption.gelontMelonssagelon}", elonxcelonption)
    }
  }
}
